--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="elements_container">
 
-            <div class="element_box" style="grid-column: 5; grid-row: 3;">
+            <div class="element_box" style="grid-column: 4; grid-row: 2;">
                 <div class="button_a" id="btn1a"></div>
                 <h1 class="button_a_text">1</h1>
 
@@ -36,7 +36,7 @@
             </div>
 
 
-            <div class="element_box" style="grid-column: 12; grid-row: 2;">
+            <div class="element_box" style="grid-column: 9; grid-row: 3;">
                 <div class="button_b" id="btn1b"></div>
                 <div class="button_b_icon"></div>
 
@@ -51,8 +51,9 @@
                 
             </div>
 
-            <div class="element_box moveup1box" style="grid-column: 7 / span 3; grid-row: 4 / span 4;">
+            <div class="element_box" style="grid-column: 6 / span 3; grid-row: 4 / span 4;">
 
+                <div class="moveup1box">
                 <div class="moveup1">
                     <div class="upbg1a"></div>
                     <div class="upbg1b"></div>
@@ -63,12 +64,38 @@
 
 
                 </div>
+                </div>
 
 
 
             </div>
 
-            <div class="element_box">
+            <div class="element_box" style="grid-column: 13 / span 4; grid-row: 3 / span 3;">
+
+                <div class="moveup1box">
+                <div class="moveup1" style="transform: translate(1.5vw, -5vw) scale(59%); animation-duration: 1s; animation-delay: 0.05s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
+                    <div class="upbg1a"></div>
+                    <div class="upbg1b"></div>
+                    <div class="upbg1c"></div>
+                    <div class="upbg1d"></div>
+                </div>
+
+                <div class="moveup1" style="transform: translate(-4vw, -7vw) scale(59%); animation-duration: 1s; animation-delay: 0s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
+                    <div class="upbg1a"></div>
+                    <div class="upbg1b"></div>
+                    <div class="upbg1c"></div>
+                    <div class="upbg1d"></div>
+                </div>
+
+                <div class="moveup1" style="transform: translate(7vw, -3vw) scale(59%); animation-duration: 1s; animation-delay: 0.1s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
+                    <div class="upbg1a"></div>
+                    <div class="upbg1b"></div>
+                    <div class="upbg1c"></div>
+                    <div class="upbg1d"></div>
+                </div>
+                </div>
+
+
 
             </div>
 
