--- a/fullscreen_mode.html
+++ b/fullscreen_mode.html
@@ -18,7 +18,7 @@
 
     <!--css file reference-->
 
-    <link rel="stylesheet" href="plansza.css">
+    <link rel="stylesheet" href="fullscreen_mode.css">
     
 </head>
 
