btn rework and item moveup type

--- a/fullscreen_mode.html
+++ b/fullscreen_mode.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <a href="fullscreen_mode.html">KLIKNIJ TU BY PRZEŁĄCZYĆ NA TRYB PEŁNOEKRANOWY</a>
+    <a href="index.html" style="font-size: 10px; z-index: 100; color: white; position: absolute; bottom: 2vw; left: 2vw">KLIKNIJ TU BY PRZEŁĄCZYĆ NA TRYB NORMALNY</a>
     
     <div class="main_container">
 
