--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <body>
 
     <a href="fullscreen_mode.html" style="font-size: 10px; z-index: 100; color: rgb(0, 0, 0); position: absolute; bottom: 1vw; left: 2vw;">KLIKNIJ TU BY PRZEŁĄCZYĆ NA TRYB PEŁNOEKRANOWY</a>
+
+    <div class="rotate_all_btn"></div>
     
     <div class="main_container">
 
@@ -32,7 +34,7 @@
 
             <div class="element_box" style="grid-column: 6; grid-row: 2;">
                 <div class="button_a" id="btn1a"></div>
-                <h1 class="button_a_text">1</h1>
+                <div class="button_a_text">1</div>
 
                     
             </div>
