--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
             <div class="element_box" style="grid-column: 14 / span 2; grid-row: 6 / span 2;">
 
                 <div class="moveup1box">
-                <div class="moveup1" style="transform: translate(-3vw, 6vw) scale(25%); animation-duration: 2s; animation-delay: 0.05s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
+                <div class="moveup1 m1fix" style="transform: translate(-3vw, 0vw) scale(25%); animation-duration: 2s; animation-delay: 0.05s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
                     <div class="upbg1a"></div>
                     <div class="upbg1b"></div>
                     <div class="upbg1c"></div>
                     <div class="upbg1d"></div>
                 </div>
 
-                <div class="moveup1" style="transform: translate(-5vw, 5vw) scale(25%); animation-duration: 2s; animation-delay: 0s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
+                <div class="moveup1 m2fix" style="transform: translate(-5vw, 0vw) scale(25%); animation-duration: 2s; animation-delay: 0s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
                     <div class="upbg1a"></div>
                     <div class="upbg1b"></div>
                     <div class="upbg1c"></div>
                     <div class="upbg1d"></div>
                 </div>
 
-                <div class="moveup1" style="transform: translate(-1vw, 7vw) scale(25%); animation-duration: 2s; animation-delay: 0.1s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
+                <div class="moveup1 m3fix" style="transform: translate(-1vw, 0vw) scale(25%); animation-duration: 2s; animation-delay: 0.1s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
                     <div class="upbg1a"></div>
                     <div class="upbg1b"></div>
                     <div class="upbg1c"></div>
@@ -165,9 +165,9 @@
 
         </div>
 
-        <div class="closer" id="closer1">X</div>
-        <div class="closer" id="closer2">X</div>
-        <div class="closer" id="closer3">X</div>
+        <div class="closer" id="closer1"></div>
+        <div class="closer" id="closer2"></div>
+        <div class="closer" id="closer3"></div>
 
 
 
@@ -176,7 +176,7 @@
 
         <div class="start_msg">
             <p class="start_msg_text">Tutaj tekst jakis bedzie</p>
-            <div class="closer" id="start_msg_closer">X</div>
+            <div class="closer" id="start_msg_closer"></div>
         </div>
 
         <div class="bg_cover"></div>
