--- a/vertical_mode.html
+++ b/vertical_mode.html
@@ -18,13 +18,11 @@
 
     <!--css file reference-->
 
-    <link rel="stylesheet" href="plansza.css">
+    <link rel="stylesheet" href="vertical_mode.css">
     
 </head>
 
 <body>
-
-    <a href="vertical_mode.html" style="font-size: 10px; z-index: 100; color: rgb(255, 0, 0); position: absolute; bottom: 1vw; left: 2vw;">KLIKNIJ TU BY PRZEŁĄCZYĆ NA TRYB PIONOWY</a>
 
     <div class="rotate_all_btn"></div>
     
