--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <div class="elements_container">
 
-            <div class="main_overlay2"></div>
             <div class="main_overlay"></div>
+            <!--<div class="main_overlay2"></div>-->
 
             <div class="element_box" style="grid-column: 6; grid-row: 2;">
                 <div class="button_a" id="btn1a"></div>
