--- a/vertical.html
+++ b/vertical.html
@@ -103,7 +103,7 @@
 
             -->
 
-            <div class="element_box" style="grid-column: 14 / span 2; grid-row: 6 / span 2;">
+            <div class="element_box inactive" style="grid-column: 14 / span 2; grid-row: 6 / span 2;">
 
                 <div class="moveup1box">
                 <div class="moveup1 m1fix" style="transform: translate(-3vw, 0vw) scale(25%); animation-duration: 2s; animation-delay: 0.05s; animation-timing-function: cubic-bezier(.69,-1.07,.4,2.05);">
@@ -143,8 +143,9 @@
 
             <div class="section_type1">
                 <div class="inside_section">
-                    <h1 class="text_top">E</h1>
-                    <p class="text_main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                    <h1 class="text_top">Environmental (środowiskowe) </h1>
+                    <p class="text_main">Dotyczy sposobu, w jaki firma zarządza swoim wpływem na planetę. To jak zużywają zasoby naturalne, czy dbają o ograniczenie emisji CO2 czy też jak radzą sobie z odpadami.
+                    </p>
 
                 </div>
             </div>
@@ -161,8 +162,9 @@
 
             <div class="section_type1">
                 <div class="inside_section">
-                    <h1 class="text_top">S</h1>
-                    <p class="text_main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                    <h1 class="text_top">Social (społeczne)</h1>
+                    <p class="text_main">Dotyczy relacji z ludźmi - pracownikami, społecznościami, klientami. Chodzi o to, jak firma traktuje swoich pracowników, czy zapewnia im godziwe warunki pracy, jak angażuje się w lokalne społeczności, czy też wspiera różnorodność i równość szans.
+                    </p>
 
                 </div>
             </div>
@@ -179,8 +181,8 @@
 
             <div class="section_type1">
                 <div class="inside_section">
-                    <h1 class="text_top">G</h1>
-                    <p class="text_main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                    <h1 class="text_top">Governance (zarządzanie)</h1>
+                    <p class="text_main">Odnosi się do struktury zarządzania i zasad etycznych. Tutaj patrzymy na sposób, w jaki firma jest zarządzana - czy działa w sposób przejrzysty, czy stosuje sprawiedliwe zasady, czy też dba o uczciwość i zgodność z prawem.</p>
 
                 </div>
             </div>
