--- a/vertical.html
+++ b/vertical.html
@@ -54,7 +54,7 @@
 
 
 
-            <div class="element_box" style="grid-column: 9; grid-row: 3;">
+            <div class="element_box inactive" style="grid-column: 9; grid-row: 3;">
                 <div class="button_b" id="btn1b"></div>
                 <div class="button_b_icon"></div>
 
@@ -182,7 +182,7 @@
             <div class="section_type1">
                 <div class="inside_section">
                     <h1 class="text_top">Governance (zarządzanie)</h1>
-                    <p class="text_main">Odnosi się do struktury zarządzania i zasad etycznych. Tutaj patrzymy na sposób, w jaki firma jest zarządzana - czy działa w sposób przejrzysty, czy stosuje sprawiedliwe zasady, czy też dba o uczciwość i zgodność z prawem.</p>
+                    <p class="text_main" style="font-size: 1.3vw !important">Odnosi się do struktury zarządzania i zasad etycznych. Tutaj patrzymy na sposób, w jaki firma jest zarządzana - czy działa w sposób przejrzysty, czy stosuje sprawiedliwe zasady, czy też dba o uczciwość i zgodność z prawem.</p>
 
                 </div>
             </div>
