--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+
+    <a href="vertical.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50;">???</a>
+    <a href="https://pawlogates.itch.io/combonaut" style="font-size: 3vw; color: rgb(255, 0, 0); position: absolute; top: 3vw; z-index: 50;">coś</a>
     
     <div class="main_container">
 
