--- a/vertical.html
+++ b/vertical.html
@@ -23,7 +23,9 @@
 </head>
 
 <body>
-    
+
+    <a href="index.html" style="font-size: 1vw; color: white; position: absolute; z-index: 50;">???</a>
+
     <div class="main_container">
 
         <div class="elements_container">
