--- a/vertical.html
+++ b/vertical.html
@@ -7,6 +7,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Work+Sans&display=swap" rel="stylesheet">
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plansza</title>
@@ -146,7 +152,7 @@
             <div class="section_type1">
                 <div class="inside_section">
                     <h1 class="text_top">Environmental (środowiskowe) </h1>
-                    <p class="text_main">Dotyczy sposobu, w jaki firma zarządza swoim wpływem na planetę. To jak zużywają zasoby naturalne, czy dbają o ograniczenie emisji CO2 czy też jak radzą sobie z odpadami.
+                    <p class="text_main" style="line-height: 2.5vw !important;">Dotyczy sposobu, w jaki firma zarządza swoim wpływem na planetę. To jak zużywają zasoby naturalne, czy dbają o ograniczenie emisji CO2 czy też jak radzą sobie z odpadami.
                     </p>
 
                 </div>
@@ -165,7 +171,7 @@
             <div class="section_type1">
                 <div class="inside_section">
                     <h1 class="text_top">Social (społeczne)</h1>
-                    <p class="text_main">Dotyczy relacji z ludźmi - pracownikami, społecznościami, klientami. Chodzi o to, jak firma traktuje swoich pracowników, czy zapewnia im godziwe warunki pracy, jak angażuje się w lokalne społeczności, czy też wspiera różnorodność i równość szans.
+                    <p class="text_main" style="line-height: 1.8vw !important;">Dotyczy relacji z ludźmi - pracownikami, społecznościami, klientami. Chodzi o to, jak firma traktuje swoich pracowników, czy zapewnia im godziwe warunki pracy, jak angażuje się w lokalne społeczności, czy też wspiera różnorodność i równość szans.
                     </p>
 
                 </div>
@@ -184,7 +190,7 @@
             <div class="section_type1">
                 <div class="inside_section">
                     <h1 class="text_top">Governance (zarządzanie)</h1>
-                    <p class="text_main" style="font-size: 1.3vw !important">Odnosi się do struktury zarządzania i zasad etycznych. Tutaj patrzymy na sposób, w jaki firma jest zarządzana - czy działa w sposób przejrzysty, czy stosuje sprawiedliwe zasady, czy też dba o uczciwość i zgodność z prawem.</p>
+                    <p class="text_main" style="line-height: 2.2vw !important;">Odnosi się do struktury zarządzania i zasad etycznych. Tutaj patrzymy na sposób, w jaki firma jest zarządzana - czy działa w sposób przejrzysty, czy stosuje sprawiedliwe zasady, czy też dba o uczciwość i zgodność z prawem.</p>
 
                 </div>
             </div>
