--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="//fonts.googleapis.com">
 
     <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
     <link href="//fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
