--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
 
             <div class="textbox" id="textbox1">
-                Tutaj tekst jakis bedzie<br>
+                nienawidze git'a Tutaj tekst jakis bedzie<br>
                 Tutaj tekst jakis bedzie tu tez w sumie<br>
                 i tu tez
             </div>
