--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <link rel="preconnect" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
 
-    <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
-    <link href="//fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
     <link href="//fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Work+Sans&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
@@ -30,8 +28,11 @@
 <body>
 
     <a href="vertical.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50;">???</a>
-    <a href="https://pawlogates.itch.io/combonaut" style="font-size: 3vw; color: rgb(255, 0, 0); position: absolute; top: 3vw; z-index: 50;">coś</a>
+    <a href="mobile_app/app.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50; top: 3vw;">???!</a>
+
+    <a href="https://pawlogates.itch.io/combonaut" style="font-size: 3vw; color: rgb(255, 0, 0); position: absolute; top: 5vw; z-index: 50;">coś</a>
     
+
     <div class="main_container">
 
         <div class="elements_container">
