--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
 <body>
 
-    <a href="vertical.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50;">???</a>
-    <a href="mobile_app/app.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50; top: 3vw;">???!</a>
+    <a href="vertical.html" style="font-size: 2vw; color: black; position: absolute; z-index: 50;">VERTICAL</a>
+    <a href="web_app.html" style="font-size: 2vw; color: black; position: absolute; z-index: 50; top: 5vw;">WEB APP</a>
+    <a href="mobile_app/app.html" style="font-size: 2vw; color: black; position: absolute; z-index: 50; top: 9vw;">?</a>
 
-    <a href="https://pawlogates.itch.io/combonaut" style="font-size: 3vw; color: rgb(255, 0, 0); position: absolute; top: 5vw; z-index: 50;">coś</a>
+    <a href="https://pawlogates.itch.io/combonaut" style="font-size: 3vw; color: rgb(255, 0, 0); position: absolute; top: 12vw; z-index: 50;">coś</a>
     
 
     <div class="main_container">
