--- a/web_app.html
+++ b/web_app.html
@@ -27,11 +27,7 @@
 
 <body>
 
-    <a href="vertical.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50;">???</a>
-    <a href="mobile_app/app.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50; top: 3vw;">???!</a>
-
-    <a href="https://pawlogates.itch.io/combonaut" style="font-size: 3vw; color: rgb(255, 0, 0); position: absolute; top: 5vw; z-index: 50;">coś</a>
-    
+    <a href="index.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50;">???</a>    
 
     <div class="main_container">
 
