--- a/web_app.html
+++ b/web_app.html
@@ -238,17 +238,22 @@
 
         </div>
         
-        <div class="slider TASKSslider" id="slider_TASKS" style="background-image: url(images/wp6.png);">
+        <div class="slider TASKSslider" id="slider_TASKS" style="background-color: rgba(0, 123, 255, 0.386);">
 
-            <div class="section_type1">
+            <div class="section_type1 task_list">
                 <div class="inside_section">
-                    <h1 class="text_top">NAGŁÓWEK</h1>
-                    <p class="text_main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                    <h1 class="text_top">NAJBLIŻSZE TERMINY</h1>
+
+                    <p class="text_main">Zadanie 1: h - do 13:00 czw. (ZROBIONE)</p>
+                    <p class="text_main">Zadanie 2: h - do 2:00 pon. (NIE ZROBIONE)</p>
+
+                    <p class="text_main"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+
 
                 </div>
             </div>
 
-            <div class="section_type2" style="background-image: url(images/wp5.png);">
+            <div class="section_type2 task_list2" style="background-image: url(images/wp5.png);">
                 <div class="inside_section">
 
                 </div>
