visual, task list

--- a/web_app.html
+++ b/web_app.html
@@ -240,7 +240,7 @@
         
         <div class="slider TASKSslider" id="slider_TASKS" style="background-color: rgba(0, 123, 255, 0.386);">
 
-            <div class="section_type1 task_list">
+            <div class="section_type1 task_list" style="background-color: rgba(255, 0, 0, 0.906); box-shadow: inset 0 0 3vw rgba(0, 0, 0, 0.406);">
                 <div class="inside_section">
                     <h1 class="text_top">NAJBLIŻSZE TERMINY</h1>
 
@@ -253,8 +253,27 @@
                 </div>
             </div>
 
-            <div class="section_type2 task_list2" style="background-image: url(images/wp5.png);">
-                <div class="inside_section">
+            <div class="section_type2 task_list2" style="background-image: url(images/scroll_transparent.png); background-size: 100%; background-position: center; rotate: -90deg;
+            background-repeat: no-repeat !important; background-color: rgba(0, 92, 185, 0.429);">
+                <div class="inside_section inside_section_task_list2" style="rotate: 90deg;">
+
+                    <h1 class="text_top text_top_task_list">ZADANIA</h1>
+
+                    <p class="text_main text_task_list">Zadanie 1: h - do 13:00 czw. (ZROBIONE)</p>
+                    <p class="text_main text_task_list">Zadanie 2: h - do 2:00 pon. (NIE ZROBIONE)</p>
+
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <p class="text_main text_task_list"><span id="taskName1">zrob cos</span> <span id="taskDeadline1">do wtedy</span> <div class="is_taskDone" id="taskDone1"></div></p>
+                    <br>
+                    <br>
+                    <br>
 
                 </div>
             </div>
