--- a/web_app.html
+++ b/web_app.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <a href="index.html" style="font-size: 1vw; color: black; position: absolute; z-index: 50;">???</a>    
+    <a href="index.html" style="font-size: 1vw; color: rgb(255, 255, 255); position: absolute; z-index: 100;">???</a>    
 
     <div class="main_container">
 
