--- a/web_app.html
+++ b/web_app.html
@@ -28,6 +28,7 @@
 <body>
 
     <a href="index.html" style="font-size: 1vw; color: rgb(255, 255, 255); position: absolute; z-index: 100;">???</a>    
+    <p style="width: 10vw; font-size: 1vw; color: rgb(255, 255, 255); position: absolute; z-index: 100; top: 3vw;">Na razie tylko na pc testuję, więc scalowanie może (będzie) się psuć na telefonach lub wąskich ekranach</p>    
 
     <div class="main_container">
 
@@ -255,6 +256,9 @@
 
             <div class="section_type2 task_list2" style="background-image: url(images/scroll_transparent.png); background-size: 100%; background-position: center; rotate: -90deg;
             background-repeat: no-repeat !important; background-color: rgba(0, 92, 185, 0.429);">
+
+                <div class="mouse_icon"></div>
+
                 <div class="inside_section inside_section_task_list2" style="rotate: 90deg;">
 
                     <h1 class="text_top text_top_task_list">ZADANIA</h1>
