--- a/web_app.html
+++ b/web_app.html
@@ -68,7 +68,7 @@
             <div class="element_box" style="grid-column: 9; grid-row: 5;">
                 <div class="button_a" id="btn_WORKERS"></div>
                 <!--<h1 class="button_a_text">3</h1>-->
-                <div class="button_a_icon" style="background-image: url(images/ikony/gear-2-256.png);"></div>
+                <div class="button_a_icon" style="background-image: url(images/ikony/gear-2-256.png); filter: invert(10);"></div>
                 <h1 class="btn_description">ZNAJOMI</h1>
                     
             </div>
@@ -76,7 +76,7 @@
             <div class="element_box" style="grid-column: 12; grid-row: 5;">
                 <div class="button_a" id="btn_MESSAGES"></div>
                 <!--<div class="button_a_text">1</div>-->
-                <div class="button_a_icon" style="background-image: url(images/ikony/email-12-256.png);"></div>
+                <div class="button_a_icon" style="background-image: url(images/ikony/email-12-256.png); filter: invert(10);"></div>
                 <h1 class="btn_description">WIADOMOŚCI</h1>
    
             </div>
@@ -84,7 +84,7 @@
             <div class="element_box" style="grid-column: 15; grid-row: 5;">
                 <div class="button_a" id="btn_EVENTS"></div>
                 <!--<h1 class="button_a_text">2</h1>-->
-                <div class="button_a_icon" style="background-image: url(images/ikony/report-3-256.png);"></div>
+                <div class="button_a_icon" style="background-image: url(images/ikony/report-3-256.png); filter: invert(10);"></div>
                 <h1 class="btn_description">Grafik</h1>
 
             </div>
@@ -92,7 +92,7 @@
             <div class="element_box" style="grid-column: 18; grid-row: 5;">
                 <div class="button_a" id="btn_ACTIVITy"></div>
                 <!--<h1 class="button_a_text">3</h1>-->
-                <div class="button_a_icon" style="background-image: url(images/ikony/edit-5-256.png);"></div>
+                <div class="button_a_icon" style="background-image: url(images/ikony/edit-5-256.png); filter: invert(10);"></div>
                 <h1 class="btn_description">Aktywność</h1>
 
             </div>
@@ -100,7 +100,7 @@
             <div class="element_box" style="grid-column: 3; grid-row: 8;">
                 <div class="button_a" id="btn_FEEDBACK"></div>
                 <!--<h1 class="button_a_text">3</h1>-->
-                <div class="button_a_icon" style="background-image: url(images/ikony/gear-256.png);"></div>
+                <div class="button_a_icon" style="background-image: url(images/ikony/gear-256.png); filter: invert(10);"></div>
                 <h1 class="btn_description">Feedback</h1>
 
             </div>
@@ -108,7 +108,7 @@
             <div class="element_box" style="grid-column: 6; grid-row: 8;">
                 <div class="button_a" id="btn_GAME1"></div>
                 <!--<h1 class="button_a_text">3</h1>-->
-                <div class="button_a_icon" style="background-image: url(images/ikony/info-2-256.png);"></div>
+                <div class="button_a_icon" style="background-image: url(images/ikony/info-2-256.png); filter: invert(10);"></div>
                 <h1 class="btn_description">Gra1</h1>
 
             </div>
@@ -226,12 +226,14 @@
                 </div>
             </div>
 
-            <div class="section_type2" style="background-image: url(images/wp8.png);">
+            <div class="section_type2" style="background-image: url(images/bg_a2.png); left: 16vw">
                 <div class="inside_sectionGRID">
 
-                    <button onclick="changeBadgeDescription(b1d)" class="badge" id="badge1">Kliknij</button>
-                    <button onclick="changeBadgeDescription(b2d)" class="badge" id="badge1">mnie</button>
-                    <button onclick="changeBadgeDescription(b3d)" class="badge" id="badge1">tu</button>
+                    <button onclick="changeBadgeDescription(b1d)" class="badge" id="badge1" style="background-image: url(images/ikony/none); background-size: 100%;">Kliknij</button>
+                    <button onclick="changeBadgeDescription(b2d)" class="badge" id="badge1" style="background-image: url(images/ikony/none); background-size: 100%;">mnie</button>
+                    <button onclick="changeBadgeDescription(b3d)" class="badge" id="badge1" style="background-image: url(images/ikony/none); background-size: 100%;">tu</button>
+                    <button onclick="changeBadgeDescription(b4d)" class="badge" id="badge1" style="background-image: url(images/ikony/icon_car.png); background-size: 100%;"></button>
+
 
 
                 </div>
@@ -239,7 +241,7 @@
 
         </div>
         
-        <div class="slider TASKSslider" id="slider_TASKS" style="background-color: rgba(0, 123, 255, 0.386);">
+        <div class="slider TASKSslider" id="slider_TASKS" style="background-color: rgba(0, 123, 255, 0.386); background-image: url(images/bg_a2.png);">
 
             <div class="section_type1 task_list" style="background-color: rgba(255, 0, 0, 0.906); box-shadow: inset 0 0 3vw rgba(0, 0, 0, 0.406);">
                 <div class="inside_section">
