--- a/web_app.html
+++ b/web_app.html
@@ -288,7 +288,7 @@
 
         <div class="slider WORKERSslider" id="slider_WORKERS" style="background-image: url(images/wp9.png);">
 
-            <div class="section_type1">
+            <div class="section_type1 workers_info">
                 <div class="inside_section">
                     <h1 class="text_top">NAGŁÓWEK</h1>
                     <p class="text_main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
@@ -296,10 +296,38 @@
                 </div>
             </div>
 
-            <div class="section_type2" style="background-image: url(images/wp4.png);">
-                <div class="inside_section">
+            <div class="section_type2 workers_list" style="background-image: url(images/wp4.png);">
 
+
+                <div class="workers_listItem">
+                    <div class="workers_profilePicture" id="workers_profilePicture1" style="background-color: blue;"></div>
+                    <div class="workers_name" id="name1" style="background-color: blue;">null</div>
+                    <div class="workers_status" id="status1"> null</div>
+                    <div class="send_message" id="send_message1"></div>
                 </div>
+
+                <div class="workers_listItem">
+                    <div class="workers_profilePicture" id="workers_profilePicture2"></div>
+                    <div class="workers_name" id="name2">null</div>
+                    <div class="workers_status" id="status2"> null</div>
+                    <div class="send_message" id="send_message2"></div>
+                </div>
+
+                <div class="workers_listItem">
+                    <div class="workers_profilePicture" id="workers_profilePicture3"></div>
+                    <div class="workers_name" id="name3">null</div>
+                    <div class="workers_status" id="status3"> null</div>
+                    <div class="send_message" id="send_message3"></div>
+                </div>
+
+                <div class="workers_listItem">
+                    <div class="workers_profilePicture" id="profilePicture4"></div>
+                    <div class="workers_name" id="name4">null</div>
+                    <div class="workers_status" id="status4"> null</div>
+                    <div class="send_message" id="send_message4"></div>
+                </div>
+
+
             </div>
 
         </div>
